--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ praw==7.1.0
 requests==2.25.1
 jsonschema==3.2.0 
 mysql-connector==2.2.9
-opencv-python==4.5.1.48
+opencv-python-headless==4.5.1.48
 matplotlib==3.3.4
